--- a/final.css
+++ b/final.css
@@ -1,64 +1,100 @@
 .p1{
-    width:100px ;
-    height: 100px;
-    background:#9CD5FB;
-    border-radius: 30px;
-    margin: 30px;
-    border: none;
-
-}
-.p2{
-    width:100px ;
-    height: 100px;
-    background:#9CD5FB;
-    border-radius: 30px;
-    margin: 30px;
-    border: none;
-    
+    width:200px ;
+    height:200px ;
+    background:white;
+    border:solid white 1px ;
+    box-shadow: 0 10px 20px rgba(6, 47, 106, 0.5); 
+    text-align: center;
+   display: flex;
+   flex-direction: column;
+   border-radius: 50px;
+   
    
 }
-.p3{
-    width:100px ;
-    height: 100px;
-    background:#9CD5FB;
-    border-radius: 30px;
-    margin: 30px;
-    border: none;
-}
+
+
 
  .button1{ 
+   
+   display: grid;
+   grid-template-columns: repeat(4, 1fr); 
    text-align: center;
-   
-   
+   display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-left:30px ;
+    margin-right:30px ;
+    
  }
+ .imgo2{
+  width: 300px; 
+  height: 300px;
+  display: block; 
+  
+  
+ }
+ .imgCamamedica{
+  width: 100px; 
+  height: 100px;
+  display: block; 
+  justify-content: center;
+  align-items: center;
+ 
+ }
+ 
  .button2{
- text-align: center;
-    margin:30px ;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  text-align: center;
+   display: flex;
+    justify-content: space-between;
+    margin-left:30px ;
+    margin-right:30px ;
+
+
  }
  .button3{
-    text-align: center;
-    margin:30px ;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  text-align: center;
+   display: flex;
+    justify-content: space-between;
+    margin-left:30px ;
+    margin-right:30px ;
  }
  
  .sq{
    background-color:#062F6A ;
-   width: 100%;
-   height:50px ;
-   margin-top: 15%;
+   width:300%;
+   height:200px ;
  }
 
  #logo{
-   width:400px ;
-   position: absolute;
-   top: 15%;
-   left: 50%;
-   transform: translate(-50%, -50%);
+   width:200px ;
+   height:200px ;
+  
+   
+ }
+ p{
+  color: #062F6A;
+  box-shadow: 0 15px 35px rgba(6, 47, 106, 0.5); 
+  font-weight: bold ;
+  font-size:20px ;
+ }
+ #Gover{
+  width: 180px; 
+ }
+ #Medical{
+  width: 180px; 
+ }
+ #Device{
+  width: 180px; 
+
+ }
+ fieldset{
+  width:500px ;
+  height: 500px; ;
+  margin-left: 50% ;
+  margin-right: 50%;
  }
  
- .control{
-   position: absolute;
-   left: 85%;
-   bottom: 63%;
-   transform: translate(-50%, -50%);
-height:25px ; 
-border-radius:10px ;}
