--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,8 @@ text-align: left;
 header {
 background-color: #062F6A;
 display: flex; 
+
+ 
  
 }
 
@@ -113,6 +115,7 @@ nav {
 text-align: center;
 margin-left:40%;
 margin-top:50px ;
+
 
 }
 
@@ -124,6 +127,7 @@ padding: 30px;
 
 nav ul li {
 display: inline-block;
+
 }
 
 nav ul li a {
@@ -138,12 +142,46 @@ background-color: #9CD5FB;
 }
 
 
-footer {
+footer p{
 background-color: #333;
 color: #ffffff;
 text-align: center;
 padding: 20px;
 grid-column: span 2;
 }
+#buttonsubmit{
+  width:100px ;
+  height:25px ;
+  color: black;
+  border-radius: 10px;
+  border:black 2px;
+  font-weight: bold;
+  background-color: #9CD5FB;
 
+}
  
+.buttons{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+#buttons{
+margin: 30px;
+ width: 150px; 
+ height: 60px;
+ border-radius: 30px;
+ border: none;
+ background-color: #9CD5FB;
+margin-left: 45%;
+font-weight: bold ;
+
+}
+.table td{
+  width: 800px;
+  font-size: 25px;
+  
+}
+.table{
+margin-left: 50px;
+  margin-right: 50px;
+}
