--- a/styles.css
+++ b/styles.css
@@ -12,27 +12,20 @@
    
 }
 
+.button1,.button2,.button3{ 
+ 
+  grid-template-columns: repeat(4, 0fr); 
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  margin-left:100px ;
+  margin-right:100px ;
+  margin-top: 50px;
+}
 
 
- .button1{ 
-   
-   display: grid;
-   grid-template-columns: repeat(4, 1fr); 
-   text-align: center;
-   display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-    margin-left:30px ;
-    margin-right:30px ;
-    
- }
- .imgo2{
-  width: 300px; 
-  height: 300px;
-  display: block; 
-  
-  
- }
+ 
+ 
  .imgCamamedica{
   width: 100px; 
   height: 100px;
@@ -42,31 +35,22 @@
  
  }
  
- .button2{
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); 
-  text-align: center;
-   display: flex;
-    justify-content: space-between;
-    margin-left:30px ;
-    margin-right:30px ;
+ 
+ 
+ .imgdevice{
+  width: 100px; 
+  height: 100px;
+  display: block;
+  padding:25% ;
 
-
- }
- .button3{
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); 
-  text-align: center;
-   display: flex;
-    justify-content: space-between;
-    margin-left:30px ;
-    margin-right:30px ;
- }
+ }  
  
  .sq{
    background-color:#062F6A ;
    width:100%;
    height:200px ;
+   
+   
  }
 
  #logo{
@@ -91,7 +75,7 @@
   width: 180px; 
 
  }
- fieldset{
+ .fieldset{
   display: block;
   border-width: 5px;
   border-style:initial;
@@ -185,3 +169,108 @@ font-weight: bold ;
 margin-left: 50px;
   margin-right: 50px;
 }
+.Governorates { 
+  display: flex;
+  
+}
+.Governorates1{
+  display: flex;
+ flex-direction: column;
+ margin-right: 40%;
+ text-align: center;
+ 
+ 
+}
+.Governorates2{
+  display: flex;
+ flex-direction: column;
+ text-align: center;}
+ 
+ .Governorates1 input{
+  margin-top: 80px;
+  width: 250px;
+  height:90px ;
+  margin-left: 80%;
+  font-size:20px ;
+  color:#062F6A;
+  text-shadow: #9CD5FB 100px;
+  font-weight: bold;
+  border-color:#9CD5FB ;
+border-radius: 30px;
+text-shadow: 2px 2px 4px rgba(156, 213, 251, 10);
+
+  
+}
+
+ .Governorates2 input{
+  margin-top: 80px;
+  width: 250px;
+  height:90px ;
+  margin-right: 30%;
+  font-size:20px ;
+  font-weight: bold;
+  color:#062F6A;
+  border-color:#9CD5FB ;
+  border-radius: 30px;
+  text-shadow: 2px 2px 4px rgba(156, 213, 251, 10);
+  
+
+
+}
+.famman{
+  border: black 2px;
+  box-shadow:#062F6A;
+  margin:50px
+
+}
+
+  .dd{
+    display: flex;
+  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-left: 20 0px;
+  }
+  .d{
+    display: flex;
+  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  }
+  #Request{
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    background-color:  #9CD5FB;
+    border: 2px solid #062F6A;
+    border-radius: 10px;
+    box-shadow: 5px 5px 0px #062F6A;
+    transition: all 0.3s ease;
+    cursor: pointer;
+  
+  }
+  
+  #Request:hover {
+    background-color: #062F6A;
+    color: #ffffff;
+    border: 2px solid  #062F6A;;
+    box-shadow: 5px 5px 0px #000000;
+  }
+  
+  #Request:active {
+    background-color: #9CD5FB;
+    box-shadow: none;
+    transform: translateY(1px);
+  }
+  a{
+    text-decoration: none;
+
+  }
+  #nemetype{
+    font-size: 25px;
+    font-weight: bolder;
+  }
+
